--- a/index.html
+++ b/index.html
@@ -51,6 +51,11 @@
             <h3>Site sobre programação</h3>
             <a href="https://blog.betrybe.com/css/css-margin/" class="btn">Aula_Js</a>
         </nav>
+        <nav class="card"> <!--tecnica para colocar imagem que estão em tanho desigual-->
+            <h3>Site exercicio loops</h3>
+            <a href="https://github.com/go4Mor4/Exericios-resolvidos_Estrutura-de-repeticao" class="btn">Aula de loops exercicio</a>
+        </nav>
     </main>
 </body>
 </html>
+
