--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <h3>Site exercicio loops</h3>
             <a href="https://github.com/go4Mor4/Exericios-resolvidos_Estrutura-de-repeticao" class="btn">Aula de loops exercicio</a>
         </nav>
+        <nav class="card"> <!--tecnica para colocar imagem que estão em tanho desigual-->
+            <h3>exercicio txt</h3>
+            <a href="https://github.com/Almanaqueskills/exer" class="btn">exercicios</a>
+        </nav>
     </main>
 </body>
 </html>
